<resources>
    <string name="app_name">Socket Power</string>
    <string name="action_sign_in">Sign In</string>
    <string name="hidden_username_text">Username</string>
    <string name="hidden_password_text">Password</string>

    <string name="string1On">Turning on outlet one</string>
    <string name="string2On">Turning on outlet two</string>
    <string name="string3On">Turning on outlet three</string>
    <string name="string4On">Turning on outlet four</string>
    <string name="string5On">Turning on outlet five</string>
    <string name="string6On">Turning on outlet six</string>

    <string name="string1Off">Turning off outlet one</string>
    <string name="string2Off">Turning off outlet two</string>
    <string name="string3Off">Turning off outlet three</string>
    <string name="string4Off">Turning off outlet four</string>
    <string name="string5Off">Turning off outlet five</string>
    <string name="string6Off">Turning off outlet six</string>

    <string name="title">Sockets</string>
    <string name="tog1">ON</string>
    <string name="tog2">ON</string>
    <string name="tog3">ON</string>
    <string name="tog4">ON</string>
    <string name="tog5">ON</string>
    <string name="tog6">ON</string>

    <string name="togo1">OFF</string>
    <string name="togo2">OFF</string>
    <string name="togo3">OFF</string>
    <string name="togo4">OFF</string>
    <string name="togo5">OFF</string>
    <string name="togo6">OFF</string>

    <string name="one">"1"</string>
    <string name="two">"2"</string>
    <string name="three">"3"</string>
    <string name="four">"4"</string>
    <string name="five">"5"</string>
    <string name="six">"6"</string>
    <string name="getStarted">Get Started</string>

    <!-- Strings related to login -->

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="titledevice">Select Device</string>
    <string name="back">Back</string>
    <string name="device1">Device 1</string>
    <string name="device2">Device 2</string>
    <string name="device3">Device 3</string>
    <string name="device4">Device 4</string>
    <string name="select_device_pic"/>
    <string name="select_device_header"/>
    <string name="select_dev_img"/>
    <string name="login_header">Welcome To Socket Power</string>



    <string name = "sampleClient">{\"client_id\":1,\"firstname\":\"John\",\"lastname\":\"Smith\",\"email\":\"comeatmebro@sample.com\",\"username\":\"dudebro64\",\"password\":\"password\",\"date_of_birth\":\"1911-11-11\",\"phonenumber\":1112223333,\"devices\":[{\"device_id\":\"460028000751353530373132\",\"access_token\":\"9753c88bb2723d4a882497bc80627a62270cb683\",\"outlets\":[{\"outlet_id\":1,\"outlet_status\":false,\"device_id\":\"460028000751353530373132\"},{\"outlet_id\":2,\"outlet_status\":false,\"device_id\":\"460028000751353530373132\"},{\"outlet_id\":3,\"outlet_status\":false,\"device_id\":\"460028000751353530373132\"},{\"outlet_id\":4,\"outlet_status\":false,\"device_id\":\"460028000751353530373132\"},{\"outlet_id\":5,\"outlet_status\":false,\"device_id\":\"460028000751353530373132\"},{\"outlet_id\":6,\"outlet_status\":false,\"device_id\":\"460028000751353530373132\"}]}]}</string>

</resources>
