<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/select_device"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:weightSum="1"
    tools:context="activity.SelectDeviceGUI">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/select_device_header"
        android:text="@string/titledevice"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height"

        android:contentDescription="@string/select_dev_img"
        app:srcCompat="@android:drawable/editbox_background_normal"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="button1"
            android:textColor="@color/colorAccent"
            tools:text="@string/device1"/>

    </LinearLayout>

</LinearLayout>
