<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/powerstrip_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="activity.PowerstripGUI">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@mipmap/ai_mic"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/title"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/one"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="75dp"
                android:layout_height="@android:dimen/app_icon_size"
                android:switchMinWidth="60dp"
              />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/two"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <Switch
                android:id="@+id/switch2"
                android:layout_width="75dp"
                android:layout_height="@android:dimen/app_icon_size"
                android:switchMinWidth="60dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/three"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <Switch
                android:id="@+id/switch3"
                android:layout_width="75dp"
                android:layout_height="@android:dimen/app_icon_size"
                android:switchMinWidth="60dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/four"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <Switch
                android:id="@+id/switch4"
                android:layout_width="75dp"
                android:layout_height="@android:dimen/app_icon_size"
                android:switchMinWidth="60dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/five"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <Switch
                android:id="@+id/switch5"
                android:layout_width="75dp"
                android:layout_height="@android:dimen/app_icon_size"
                android:switchMinWidth="60dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/six"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>

            <Switch
                android:id="@+id/switch6"
                android:layout_width="75dp"
                android:layout_height="@android:dimen/app_icon_size"
                android:switchMinWidth="60dp"/>

        </LinearLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:editable="false"
        android:visibility="invisible"
        android:ems="10"
        android:inputType="textPersonName" />

</RelativeLayout>
